[gd_scene load_steps=9 format=2]

[ext_resource path="res://Controller.gd" type="Script" id=1]
[ext_resource path="res://RasterCamera.gd" type="Script" id=2]
[ext_resource path="res://TriangleMesh.gd" type="Script" id=3]
[ext_resource path="res://RasterVisualizer.gd" type="Script" id=4]
[ext_resource path="res://ProfilerLabel.gd" type="Script" id=5]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.5
bottom_radius = 0.5
height = 1.0
radial_segments = 8
rings = 1

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -0.5, -0.5, 0, 1, 1.00001, 1e-005 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97281,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 3
}

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 1, 1 )

[node name="Spatial" type="Spatial"]

[node name="Controller" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="RasterCamera" type="Camera" parent="Controller"]
script = ExtResource( 2 )

[node name="Meshes" type="Spatial" parent="."]

[node name="CylinderMesh" type="MeshInstance" parent="Meshes" groups=[
"rasterize",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.06094, 0, -2 )
mesh = SubResource( 1 )
material/0 = null

[node name="TriangleMesh" type="MeshInstance" parent="Meshes" groups=[
"rasterize",
]]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0, 0, -2 )
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 3 )

[node name="PlaneMesh" type="MeshInstance" parent="Meshes" groups=[
"rasterize",
]]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 2.00142, 0, -2 )
mesh = SubResource( 3 )
material/0 = null

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RasterVisualizer" type="Control" parent="UI"]
margin_left = 743.0
margin_top = 446.0
margin_right = 999.0
margin_bottom = 574.0
rect_min_size = Vector2( 256, 128 )
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="UI"]
margin_right = 338.0
margin_bottom = 106.0

[node name="ProfilerLabel" type="Label" parent="UI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 40.0
margin_top = 500.0
margin_right = 400.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_right = 360.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "FOV"

[node name="FOVSlider" type="HSlider" parent="UI/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 11
size_flags_vertical = 3
min_value = 50.0
max_value = 110.0
value = 70.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_top = 20.0
margin_right = 360.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "Z Near"

[node name="NearPlaneSlider" type="HSlider" parent="UI/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
step = 0.01
value = 0.01
tick_count = 200
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_top = 40.0
margin_right = 360.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "Z Far"

[node name="FarPlaneSlider" type="HSlider" parent="UI/VBoxContainer/HBoxContainer3"]
margin_left = 54.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
step = 0.01
value = 10.0
tick_count = 200
ticks_on_borders = true
[connection signal="profile_timestamps" from="Controller/RasterCamera" to="UI/Panel/ProfilerLabel" method="update_profiler"]
[connection signal="rasterize_complete" from="Controller/RasterCamera" to="UI/RasterVisualizer" method="render"]
[connection signal="value_changed" from="UI/VBoxContainer/HBoxContainer/FOVSlider" to="Controller/RasterCamera" method="set_fov"]
[connection signal="value_changed" from="UI/VBoxContainer/HBoxContainer2/NearPlaneSlider" to="Controller/RasterCamera" method="set_znear"]
[connection signal="value_changed" from="UI/VBoxContainer/HBoxContainer3/FarPlaneSlider" to="Controller/RasterCamera" method="set_zfar"]
